--- a/ADMFacturar/Views/Articulos/_CrearArticulo.cshtml
+++ b/ADMFacturar/Views/Articulos/_CrearArticulo.cshtml
@@ -1,4 +1,7 @@
 ﻿@model Articulo
+@{
+	var proveedores = ViewData["Proveedores"] as List<Proveedor>;
+}
 
 <form asp-action="CrearArticulo" method="post" class="max-w-4xl mx-auto p-6 bg-gray-800 rounded-md" id="formcreate">
 	<div class="border-b border-gray-700 pb-6">
@@ -27,12 +30,13 @@
 			<label for="FK_Proveedor" class="block text-sm font-medium text-gray-300">Proveedor</label>
 			<div class="mt-2">
 				<select asp-for="FK_Proveedor" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500">
-					<option value="1">Proveedor 1</option>
-					<option value="2">Proveedor 2</option>
-					<option value="3">Proveedor 3</option>
-					<option value="4">Proveedor 4</option>
-					<option value="5">Proveedor 5</option>
-					<option value="6">Proveedor 6</option>
+					@if (proveedores != null)
+					{
+						@foreach (var proveedor in proveedores)
+						{
+							<option value="@proveedor.PK_Proveedor">@proveedor.Nombre</option>
+						}
+					}
 				</select>
 			</div>
 		</div>
@@ -71,3 +75,69 @@
 		<button asp-action="Index" class="rounded-md bg-red-600 px-2 py-2 text-sm font-semibold text-white shadow-sm hover:bg-red-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-red-600">Cancelar</button>
 	</div>
 </form>
+
+<script>
+	document.getElementById('btnGuardar').addEventListener('click', function (event) {
+		event.preventDefault(); // Detener el envío normal del formulario
+
+		// Validar campos requeridos
+		var codigoArticulo = document.querySelector('[name="PK_Articulo"]').value;
+		var descripcion = document.querySelector('[name="Descripcion"]').value;
+		var codigoBarras = document.querySelector('[name="Codigo_Barras"]').value;
+		var proveedor = document.querySelector('[name="FK_Proveedor"]').value;
+		var cantidad = document.querySelector('[name="Cantidad"]').value;
+		var costo = document.querySelector('[name="Costo"]').value;
+		var precio = document.querySelector('[name="Precio"]').value;
+		var estado = document.querySelector('[name="Estado"]').value;
+
+		if (!codigoArticulo || !descripcion || !codigoBarras || !proveedor || !cantidad || !costo || !precio || !estado) {
+			// Mostrar mensaje de error con SweetAlert2 si no están completos los campos
+			Swal.fire({
+				icon: 'error',
+				title: 'Error',
+				text: 'Por favor complete todos los campos requeridos.',
+				confirmButtonColor: '#3085d6',
+				cancelButtonColor: '#d33',
+				confirmButtonText: 'OK'
+			});
+		} else {
+			// Crear objeto FormData con los datos del formulario
+			var formData = new FormData(document.getElementById('formcreate'));
+
+			// Enviar los datos al controlador utilizando fetch
+			fetch('/Articulos/CrearArticulo', {
+				method: 'POST',
+				body: formData
+			})
+				.then(response => {
+					if (response.ok) {
+						// Mostrar mensaje de éxito con SweetAlert2
+						Swal.fire({
+							icon: 'success',
+							title: 'Guardado Correctamente',
+							showConfirmButton: true,
+							confirmButtonColor: '#3085d6',
+							confirmButtonText: 'OK'
+						}).then((result) => {
+							// Redirigir a la página de índice de artículos después de guardar
+							window.location.href = '/Articulos/Index';
+						});
+					} else {
+						throw new Error('Error al guardar los datos');
+					}
+				})
+				.catch(error => {
+					// Mostrar mensaje de error con SweetAlert2
+					Swal.fire({
+						icon: 'error',
+						title: 'Error',
+						text: error.message,
+						confirmButtonColor: '#3085d6',
+						cancelButtonColor: '#d33',
+						confirmButtonText: 'OK'
+					});
+				});
+		}
+	});
+
+</script>
