--- a/ADMFacturar/Views/Articulos/_ActualizarArticulo.cshtml
+++ b/ADMFacturar/Views/Articulos/_ActualizarArticulo.cshtml
@@ -1,76 +1,67 @@
 ﻿@model Articulo
+@{
+    var proveedores = ViewData["Proveedores"] as List<Proveedor>;
+}
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ingreso de Artículo</title>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
-    <link href="~/css/custom.css" rel="stylesheet" />
-    <!-- SweetAlert2 CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css" rel="stylesheet">
-</head>
-<body>
-
-<form asp-action="CrearArticulo" method="post" class="max-w-4xl mx-auto p-6 bg-gray-800 rounded-md" id="formcreate">
+<form asp-action="ActualizarArticulo" method="post" class="max-w-4xl mx-auto p-6 bg-gray-800 rounded-md" id="formupdate">
     <div class="border-b border-gray-700 pb-6">
-        <h2 class="text-lg font-semibold leading-7 text-white">Creación de nuevo Artículo</h2>
+        <h2 class="text-lg font-semibold leading-7 text-white">Actualizar Artículo</h2>
     </div>
-    <div class="mt-6 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-2 lg:grid-cols-3">
-        <div>
+    <div class="mt-6 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
+        <div class="sm:col-span-2">
             <label for="PK_Articulo" class="block text-sm font-medium text-gray-300">Código Artículo</label>
             <div class="mt-2">
-                <input asp-for="PK_Articulo" type="text" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500" >
+                <input asp-for="PK_Articulo" type="text" id="PKART" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500" readonly>
             </div>
         </div>
-        <div>
+        <div class="sm:col-span-2">
             <label for="Descripcion" class="block text-sm font-medium text-gray-300">Descripción</label>
             <div class="mt-2">
-                <input asp-for="Descripcion" type="text" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500" >
+                <input asp-for="Descripcion" type="text" id="Descp" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500">
             </div>
         </div>
-        <div>
+        <div class="sm:col-span-2">
             <label for="Codigo_Barras" class="block text-sm font-medium text-gray-300">Código de Barras</label>
             <div class="mt-2">
-                <input asp-for="Codigo_Barras" type="text" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500" >
+                <input asp-for="Codigo_Barras" type="text" id="CodBarras" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500">
             </div>
         </div>
-        <div>
+        <div class="sm:col-span-2">
             <label for="FK_Proveedor" class="block text-sm font-medium text-gray-300">Proveedor</label>
             <div class="mt-2">
-                <select asp-for="FK_Proveedor" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500" >
-                    <option value="1">Proveedor 1</option>
-                    <option value="2">Proveedor 2</option>
-                    <option value="3">Proveedor 3</option>
-                    <option value="4">Proveedor 4</option>
-                    <option value="5">Proveedor 5</option>
-                    <option value="6">Proveedor 6</option>
+                <select asp-for="FK_Proveedor" id="FKProveedor" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500">
+                    @if (proveedores != null)
+                    {
+                        @foreach (var proveedor in proveedores)
+                        {
+                            <option value="@proveedor.PK_Proveedor">@proveedor.Nombre</option>
+                        }
+                    }
                 </select>
             </div>
         </div>
-        <div>
+        <div class="sm:col-span-2">
             <label for="Cantidad" class="block text-sm font-medium text-gray-300">Cantidad</label>
             <div class="mt-2">
-                <input asp-for="Cantidad" type="text" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500" >
+                <input asp-for="Cantidad" type="number" id="Cant" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500">
             </div>
         </div>
-        <div>
+        <div class="sm:col-span-2">
             <label for="Costo" class="block text-sm font-medium text-gray-300">Costo</label>
             <div class="mt-2">
-                <input asp-for="Costo" type="text" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500" >
+                <input asp-for="Costo" type="number" step="0.01" id="cost" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500">
             </div>
         </div>
-        <div>
+        <div class="sm:col-span-2">
             <label for="Precio" class="block text-sm font-medium text-gray-300">Precio</label>
             <div class="mt-2">
-                <input asp-for="Precio" type="text" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500" >
+                <input asp-for="Precio" type="number" step="0.01" id="Price" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500">
             </div>
         </div>
-        <div>
+        <div class="sm:col-span-2">
             <label for="Estado" class="block text-sm font-medium text-gray-300">Estado</label>
             <div class="mt-2">
-                <select asp-for="Estado" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500"  >
+                <select asp-for="Estado" id="State" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500">
                     <option value="true">Activo</option>
                     <option value="false">Inactivo</option>
                 </select>
@@ -80,25 +71,29 @@
     <div class="mt-6 flex justify-end gap-x-4">
         <input asp-for="FK_Usuario_Creacion" value="1" type="hidden" />
         <input asp-for="FK_Usuario_Modificacion" value="1" type="hidden" />
-        <button type="submit" id="btnGuardar" class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Guardar</button>
+        <input asp-for="Fecha_Creacion" value="@DateTime.Now" type="hidden" />
+        <input asp-for="Fecha_Modificacion" value="@DateTime.Now" type="hidden" />
+        <button type="submit" id="btnActualizar" class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Actualizar</button>
         <button asp-action="Index" class="rounded-md bg-red-600 px-4 py-2 text-sm font-semibold text-white shadow-sm hover:bg-red-500 focus:ring-2 focus:ring-red-500">Cancelar</button>
     </div>
 </form>
 
-<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script>
-    document.getElementById('btnGuardar').addEventListener('click', function (event) {
+    /*Inicio de validación de boton actualizar
+            Actualización 10/7/24 por Joseth Araya
+            Se modificaron los getElementId para obtener los datos correctos*/
+    document.getElementById('btnActualizar').addEventListener('click', function (event) {
         event.preventDefault(); // Detener el envío normal del formulario
 
         // Validar campos requeridos
-        var codigoArticulo = document.querySelector('[name="PK_Articulo"]').value;
-        var descripcion = document.querySelector('[name="Descripcion"]').value;
-        var codigoBarras = document.querySelector('[name="Codigo_Barras"]').value;
-        var proveedor = document.querySelector('[name="FK_Proveedor"]').value;
-        var cantidad = document.querySelector('[name="Cantidad"]').value;
-        var costo = document.querySelector('[name="Costo"]').value;
-        var precio = document.querySelector('[name="Precio"]').value;
-        var estado = document.querySelector('[name="Estado"]').value;
+        var codigoArticulo = document.getElementById('PKART').value;
+        var descripcion = document.getElementById('Descp').value;
+        var codigoBarras = document.getElementById('CodBarras').value;
+        var proveedor = document.getElementById('FKProveedor').value;
+        var cantidad = document.getElementById('Cant').value;
+        var costo = document.getElementById('cost').value;
+        var precio = document.getElementById('Price').value;
+        var estado = document.getElementById('State').value;
 
         if (!codigoArticulo || !descripcion || !codigoBarras || !proveedor || !cantidad || !costo || !precio || !estado) {
             // Mostrar mensaje de error con SweetAlert2 si no están completos los campos
@@ -112,10 +107,10 @@
             });
         } else {
             // Crear objeto FormData con los datos del formulario
-            var formData = new FormData(document.getElementById('formcreate'));
+            var formData = new FormData(document.getElementById('formupdate'));
 
             // Enviar los datos al controlador utilizando fetch
-            fetch('/Articulos/CrearArticulo', {
+            fetch('/Articulos/ActualizarArticulo', {
                 method: 'POST',
                 body: formData
             })
@@ -124,7 +119,7 @@
                         // Mostrar mensaje de éxito con SweetAlert2
                         Swal.fire({
                             icon: 'success',
-                            title: 'Guardado Correctamente',
+                            title: 'Actualizado Correctamente',
                             showConfirmButton: true,
                             confirmButtonColor: '#3085d6',
                             confirmButtonText: 'OK'
@@ -149,6 +144,5 @@
                 });
         }
     });
+
 </script>
-</body>
-</html>
