--- a/ADMFacturar/Views/_ViewImports.cshtml
+++ b/ADMFacturar/Views/_ViewImports.cshtml
@@ -4,3 +4,10 @@
 @using Newtonsoft.Json
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 <link href="~/css/custom.css" rel="stylesheet" />
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
+<!-- SweetAlert2 CSS -->
+<link href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css" rel="stylesheet">
+<!-- Tabla Paginar  -->
+<link href="https://cdn.datatables.net/1.11.5/css/jquery.dataTables.min.css" rel="stylesheet">
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
