Actualización de proveedores

--- a/ADMFacturar/Views/Proveedores/Index.cshtml
+++ b/ADMFacturar/Views/Proveedores/Index.cshtml
@@ -1,8 +1,4 @@
-﻿@using ADM.Models
-@model Proveedor
-
-
-
+﻿@model Proveedor
 @{
 	var proveedores = ViewData["Proveedores"] as List<Proveedor>;
 }
@@ -13,14 +9,6 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Ingreso de Proveedores</title>
-	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
-	<link href="~/css/custom.css" rel="stylesheet" />
-	<!-- SweetAlert2 CSS -->
-	<link href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css" rel="stylesheet">
-	<!-- Tabla Paginar  -->
-	<link href="https://cdn.datatables.net/1.11.5/css/jquery.dataTables.min.css" rel="stylesheet">
-	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-	<script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
 </head>
 <body>
 
