--- a/ADMFacturar/Views/Proveedores/_ActualizarProveedor.cshtml
+++ b/ADMFacturar/Views/Proveedores/_ActualizarProveedor.cshtml
@@ -5,35 +5,34 @@
 		<h2 class="text-lg font-semibold leading-7 text-white">Actualizar Proveedor</h2>
 	</div>
 	<div class="mt-6 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
-
 		<div class="sm:col-span-2">
 			<label for="Nombre" class="block text-sm font-medium text-gray-300">Nombre</label>
 			<div class="mt-2">
-				<input asp-for="Nombre" type="text" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500">
+				<input asp-for="Nombre" type="text" id="nombre" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500">
 			</div>
 		</div>
 		<div class="sm:col-span-2">
 			<label for="Telefono" class="block text-sm font-medium text-gray-300">Teléfono</label>
 			<div class="mt-2">
-				<input asp-for="Telefono" type="text" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500">
+				<input asp-for="Telefono" type="text" id="tel" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500">
 			</div>
 		</div>
 		<div class="sm:col-span-2">
 			<label for="Correo" class="block text-sm font-medium text-gray-300">Correo</label>
 			<div class="mt-2">
-				<input asp-for="Correo" type="text" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500">
+				<input asp-for="Correo" type="text" id="email" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500">
 			</div>
 		</div>
 		<div class="sm:col-span-2">
 			<label for="Direccion" class="block text-sm font-medium text-gray-300">Dirección</label>
 			<div class="mt-2">
-				<input asp-for="Direccion" type="text" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500">
+				<input asp-for="Direccion" type="text" id="direccion" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500">
 			</div>
 		</div>
 		<div class="sm:col-span-2">
 			<label for="Estado" class="block text-sm font-medium text-gray-300">Estado</label>
 			<div class="mt-2">
-				<select asp-for="Estado" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500">
+				<select asp-for="Estado" id="state" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500">
 					<option value="true">Activo</option>
 					<option value="false">Inactivo</option>
 				</select>
@@ -41,74 +40,78 @@
 		</div>
 	</div>
 	<div class="mt-6 flex justify-end gap-x-4">
-		<input asp-for="PK_Proveedor" value="@Model.PK_Proveedor" type="hidden" />
-		<input asp-for="FK_Usuario_Creacion" value="1" type="hidden" />
-		<input asp-for="FK_Usuario_Modificacion" value="1" type="hidden" />
-        <button type="submit" id="btnGuardar" class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Guardar</button>
-        <button asp-action="Index" class="rounded-md bg-red-600 px-4 py-2 text-sm font-semibold text-white shadow-sm hover:bg-red-500 focus:ring-2 focus:ring-red-500">Cancelar</button>
+		<input asp-for="PK_Proveedor" type="text" id="pKProveedor" type="hidden" />
+		<input asp-for="FK_Usuario_Creacion" value="1" id="fkUserCrea" type="hidden" />
+		<input asp-for="FK_Usuario_Modificacion" value="1" id="fkUserModif" type="hidden" />
+		<button type="submit" id="btnActu" class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Guardar</button>
+		<button asp-action="Index" class="rounded-md bg-red-600 px-4 py-2 text-sm font-semibold text-white shadow-sm hover:bg-red-500 focus:ring-2 focus:ring-red-500">Cancelar</button>
 	</div>
 </form>
 
-<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script>
-    document.getElementById('btnGuardar').addEventListener('click', function (event) {
-        event.preventDefault(); // Detener el envío normal del formulario
+	/* Metodo de actualizar Proveedor
+			Incorporado el 19/7/24 por Joseth Araya
+			*/
+	document.getElementById('btnActu').addEventListener('click', function (event) {
+		event.preventDefault(); // Detener el envío normal del formulario
 
+		// Validar campos requeridos
+		var PKProveedor = document.getElementById('pKProveedor').value;
+		var nombre = document.getElementById('nombre').value;
+		var telefono = document.getElementById('tel').value;
+		var correo = document.getElementById('email').value;
+		var direccion = document.getElementById('direccion').value;
+		var estado = document.getElementById('state').value;
+		var FKUsuarioCrea = document.getElementById('fkUserCrea').value;
+		var FKUsuarioActu = document.getElementById('fkUserModif').value;
 
-        // Validar campos requeridos
-        var nombre = document.querySelector('[name="Nombre"]').value;
-        var telefono = document.querySelector('[name="Telefono"]').value;
-        var correo = document.querySelector('[name="Correo"]').value;
-        var direccion = document.querySelector('[name="Direccion"]').value;
-        var estado = document.querySelector('[name="Estado"]').value;
+		if (!nombre || !telefono || !correo || !direccion || !estado) {
+			// Mostrar mensaje de error con SweetAlert2 si no están completos los campos
+			Swal.fire({
+				icon: 'error',
+				title: 'Error',
+				text: 'Por favor complete todos los campos requeridos.',
+				confirmButtonColor: '#3085d6',
+				cancelButtonColor: '#d33',
+				confirmButtonText: 'OK'
+			});
+		} else {
+			// Crear objeto FormData con los datos del formulario
+			var formData = new FormData(document.getElementById('formupdate'));
 
-        if (!nombre || !telefono || !correo || !direccion || !estado) {
-            // Mostrar mensaje de error con SweetAlert2 si no están completos los campos
-            Swal.fire({
-                icon: 'error',
-                title: 'Error',
-                text: 'Por favor complete todos los campos requeridos.',
-                confirmButtonColor: '#3085d6',
-                cancelButtonColor: '#d33',
-                confirmButtonText: 'OK'
-            });
-        } else {
-            // Crear objeto FormData con los datos del formulario
-                var formData = new FormData(document.getElementById('formupdate'));
-
-            // Enviar los datos al controlador utilizando fetch
-            fetch('/Proveedores/ActualizarProveedor', {
-                method: 'POST',
-                body: formData
-            })
-                .then(response => {
-                    if (response.ok) {
-                        // Mostrar mensaje de éxito con SweetAlert2
-                        Swal.fire({
-                            icon: 'success',
-                            title: 'Guardado Correctamente',
-                            showConfirmButton: true,
-                            confirmButtonColor: '#3085d6',
-                            confirmButtonText: 'OK'
-                        }).then((result) => {
-                            // Redirigir a la página de índice de proveedores después de guardar
-                            window.location.href = '/Proveedores/Index';
-                        });
-                    } else {
-                        throw new Error('Error al guardar los datos');
-                    }
-                })
-                .catch(error => {
-                    // Mostrar mensaje de error con SweetAlert2
-                    Swal.fire({
-                        icon: 'error',
-                        title: 'Error',
-                        text: error.message,
-                        confirmButtonColor: '#3085d6',
-                        cancelButtonColor: '#d33',
-                        confirmButtonText: 'OK'
-                    });
-                });
-        }
-    });
+			// Enviar los datos al controlador utilizando fetch
+			fetch('/Proveedores/ActualizarProveedor', {
+				method: 'POST',
+				body: formData
+			})
+				.then(response => {
+					if (response.ok) {
+						// Mostrar mensaje de éxito con SweetAlert2
+						Swal.fire({
+							icon: 'success',
+							title: 'Guardado Correctamente',
+							showConfirmButton: true,
+							confirmButtonColor: '#3085d6',
+							confirmButtonText: 'OK'
+						}).then((result) => {
+							// Redirigir a la página de índice de proveedores después de guardar
+							window.location.href = '/Proveedores/Index';
+						});
+					} else {
+						throw new Error('Error al guardar los datos');
+					}
+				})
+				.catch(error => {
+					// Mostrar mensaje de error con SweetAlert2
+					Swal.fire({
+						icon: 'error',
+						title: 'Error',
+						text: error.message,
+						confirmButtonColor: '#3085d6',
+						cancelButtonColor: '#d33',
+						confirmButtonText: 'OK'
+					});
+				});
+		}
+	});
 </script>
