--- a/ADMFacturar/Views/Transportes/_CrearTransporte.cshtml
+++ b/ADMFacturar/Views/Transportes/_CrearTransporte.cshtml
@@ -1,49 +1,36 @@
 ﻿@model Transporte
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ingreso de Transporte</title>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
-    <link href="~/css/custom.css" rel="stylesheet" />
-    <!-- SweetAlert2 CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css" rel="stylesheet">
-</head>
-<body>
-
-    <form asp-action="CrearTransporte" method="post" class="max-w-4xl mx-auto p-6 bg-gray-800 rounded-md" id="formcreate">
-        <div class="border-b border-gray-700 pb-6">
-            <h2 class="text-lg font-semibold leading-7 text-white">Creación de nuevo Transporte</h2>
-        </div>
-        <div class="mt-6 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-2 lg:grid-cols-3">
-            <div>
-                <label for="Descripcion" class="block text-sm font-medium text-gray-300">Descripción Transporte</label>
-                <div class="mt-2">
-                    <input asp-for="Descripcion" type="text" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500" >
-                </div>
-            </div>
-            <div>
-                <label for="Estado" class="block text-sm font-medium text-gray-300">Estado</label>
-                <div class="mt-2">
-                    <select asp-for="Estado" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500" >
-                        <option value="true">Activo</option>
-                        <option value="false">Inactivo</option>
-                    </select>
-                </div>
+<form asp-action="CrearTransporte" method="post" class="max-w-4xl mx-auto p-6 bg-gray-800 rounded-md" id="formcreate">
+    <div class="border-b border-gray-700 pb-6">
+        <h2 class="text-lg font-semibold leading-7 text-white">Creación de nuevo Transporte</h2>
+    </div>
+    <div class="mt-6 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-2 lg:grid-cols-3">
+        <div>
+            <label for="Descripcion" class="block text-sm font-medium text-gray-300">Descripción Transporte</label>
+            <div class="mt-2">
+                <input asp-for="Descripcion" type="text" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500" required>
             </div>
         </div>
-        <div class="mt-6 flex justify-end gap-x-4">
-            <input asp-for="FK_Usuario_Creacion" value="1" type="hidden" />
-            <input asp-for="FK_Usuario_Modificacion" value="1" type="hidden" />
-            <button type="submit" id="btnGuardar" class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Guardar</button>
-            <button asp-action="Index" class="rounded-md bg-red-600 px-4 py-2 text-sm font-semibold text-white shadow-sm hover:bg-red-500 focus:ring-2 focus:ring-red-500">Cancelar</button>
+        <div>
+            <label for="Estado" class="block text-sm font-medium text-gray-300">Estado</label>
+            <div class="mt-2">
+                <select asp-for="Estado" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500" required>
+                    <option value="true">Activo</option>
+                    <option value="false">Inactivo</option>
+                </select>
+            </div>
         </div>
-    </form>
+    </div>
+    <div class="mt-6 flex justify-end gap-x-4">
+        <input asp-for="FK_Usuario_Creacion" value="1" type="hidden" />
+        <input asp-for="FK_Usuario_Modificacion" value="1" type="hidden" />
+        <button type="submit" id="btnGuardar" class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Guardar</button>
+        <button asp-action="Index" class="rounded-md bg-red-600 px-4 py-2 text-sm font-semibold text-white shadow-sm hover:bg-red-500 focus:ring-2 focus:ring-red-500">Cancelar</button>
+    </div>
+</form>
 
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<script>
         document.getElementById('btnGuardar').addEventListener('click', function (event) {
             event.preventDefault(); // Detener el envío normal del formulario
 
@@ -101,5 +88,3 @@
             }
         });
     </script>
-</body>
-</html>
