--- a/ADMFacturar/Views/Vendedores/_CrearVendedor.cshtml
+++ b/ADMFacturar/Views/Vendedores/_CrearVendedor.cshtml
@@ -1,33 +1,25 @@
-﻿@model Proveedor
-
-<form asp-action="CrearProveedor" method="post" class="max-w-4xl mx-auto p-6 bg-gray-800 rounded-md" id="formcreate">
+﻿@model Vendedor
+<form asp-action="CrearVendedor" method="post" class="max-w-4xl mx-auto p-6 bg-gray-800 rounded-md" id="formcreate">
     <div class="border-b border-gray-700 pb-6">
-        <h2 class="text-lg font-semibold leading-7 text-white">Creación de nuevo Proveedor</h2>
+        <h2 class="text-lg font-semibold leading-7 text-white">Creación de nuevo Vendedor</h2>
     </div>
     <div class="mt-6 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-2 lg:grid-cols-3">
-
         <div>
-            <label for="Nombre" class="block text-sm font-medium text-gray-300">Nombre</label>
+            <label for="Nombre" class="block text-sm font-medium text-gray-300">Nombre Vendedor</label>
             <div class="mt-2">
                 <input asp-for="Nombre" type="text" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500">
             </div>
         </div>
         <div>
-            <label for="Telefono" class="block text-sm font-medium text-gray-300">Teléfono</label>
+            <label for="Telefono" class="block text-sm font-medium text-gray-300">Teléfono Vendedor</label>
             <div class="mt-2">
                 <input asp-for="Telefono" type="text" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500">
             </div>
         </div>
         <div>
-            <label for="Correo" class="block text-sm font-medium text-gray-300">Correo</label>
+            <label for="Correo" class="block text-sm font-medium text-gray-300">Correo Vendedor</label>
             <div class="mt-2">
                 <input asp-for="Correo" type="text" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500">
-            </div>
-        </div>
-        <div>
-            <label for="Direccion" class="block text-sm font-medium text-gray-300">Dirección</label>
-            <div class="mt-2">
-                <input asp-for="Direccion" type="text" class="block w-full rounded-md bg-gray-900 border-gray-700 text-gray-300 py-2 px-3 shadow-sm focus:ring-2 focus:ring-indigo-500">
             </div>
         </div>
         <div>
@@ -48,22 +40,19 @@
     </div>
 </form>
 
-
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script>
-
+	//Inicio de alerta de guardar de crear
 	document.getElementById('btnGuardar').addEventListener('click', function (event) {
 		event.preventDefault(); // Detener el envío normal del formulario
-
 
 		// Validar campos requeridos
 		var nombre = document.querySelector('[name="Nombre"]').value;
 		var telefono = document.querySelector('[name="Telefono"]').value;
 		var correo = document.querySelector('[name="Correo"]').value;
-		var direccion = document.querySelector('[name="Direccion"]').value;
 		var estado = document.querySelector('[name="Estado"]').value;
 
-		if (!nombre || !telefono || !correo || !direccion || !estado) {
+		if (!nombre || !telefono || !correo || !estado) {
 			// Mostrar mensaje de error con SweetAlert2 si no están completos los campos
 			Swal.fire({
 				icon: 'error',
@@ -78,7 +67,7 @@
 			var formData = new FormData(document.getElementById('formcreate'));
 
 			// Enviar los datos al controlador utilizando fetch
-			fetch('/Proveedores/CrearProveedor', {
+			fetch('/Vendedores/CrearVendedor', {
 				method: 'POST',
 				body: formData
 			})
@@ -92,8 +81,8 @@
 							confirmButtonColor: '#3085d6',
 							confirmButtonText: 'OK'
 						}).then((result) => {
-							// Redirigir a la página de índice de proveedores después de guardar
-							window.location.href = '/Proveedores/Index';
+							// Redirigir a la página de índice de vendedores después de guardar
+							window.location.href = '/Vendedores/Index';
 						});
 					} else {
 						throw new Error('Error al guardar los datos');
@@ -112,4 +101,7 @@
 				});
 		}
 	});
+
 </script>
+
+
