Ajustes Finales Azure

--- a/ADMFacturar/Views/Clientes/Index.cshtml
+++ b/ADMFacturar/Views/Clientes/Index.cshtml
@@ -100,7 +100,7 @@
 										<form method="post" asp-action="DesactivarCliente" class="desactivar-form">
 											<input type="hidden" name="PK_Cliente" value="@cliente.PK_Cliente">
 											<button type="submit" class="bg-red-500 text-white px-2 py-1 rounded hover:bg-red-600" title="Desactivar">
-												<i class="fa-solid fa-trash"></i>
+												<i class="fa-solid fa-ban"></i>
 											</button>
 										</form>
 									</div>
