--- a/ADMFacturar/Views/Proveedores/Index.cshtml
+++ b/ADMFacturar/Views/Proveedores/Index.cshtml
@@ -92,7 +92,7 @@
                                     <form method="post" asp-action="DesactivarProveedor" class="desactivar-form">
                                         <input type="hidden" name="PK_Proveedor" value="@proveedor.PK_Proveedor">
 											<button type="submit" class="bg-red-500 text-white px-2 py-1 rounded hover:bg-red-600" title="Desactivar">
-												<i class="fa-solid fa-trash"></i>
+												<i class="fa-solid fa-ban"></i>
                                         </button>
                                     </form>
                                 </div>
