--- a/ADMFacturar/Views/Transportes/Index.cshtml
+++ b/ADMFacturar/Views/Transportes/Index.cshtml
@@ -83,7 +83,7 @@
                                     <form method="post" asp-action="DesactivarTransporte" class="desactivar-form">
                                         <input type="hidden" name="PK_Medio_Transporte" value="@transporte.PK_Medio_Transporte">
                                             <button type="submit" class="bg-red-500 text-white px-2 py-1 rounded hover:bg-red-600" title="Desactivar">
-                                                <i class="fa-solid fa-trash"></i>
+                                                <i class="fa-solid fa-ban"></i>
                                         </button>
                                     </form>
                                 </div>
