--- a/ADMFacturar/Views/Vendedores/Index.cshtml
+++ b/ADMFacturar/Views/Vendedores/Index.cshtml
@@ -85,7 +85,7 @@
                                     <form method="post" asp-action="DesactivarVendedor" class="desactivar-form">
                                         <input type="hidden" name="PK_Vendedor" value="@vendedor.PK_Vendedor">
 											<button type="submit" class="bg-red-500 text-white px-2 py-1 rounded hover:bg-red-600" title="Desactivar">
-												<i class="fa-solid fa-trash"></i>
+												<i class="fa-solid fa-ban"></i>
                                         </button>
                                     </form>
                                 </div>
